2007-06-19  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix&Change: src/kahua/persistence.scm, src/kahua/persistence/efs.scm,
	              src/kahua-server.scm, test/index-slots.scm,
	              test/persistence.scm
	  Improve keeping consistency between index-caches and id-cache.

2007-06-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, src/kahua-keyserv.scm,
	          src/kahua-spvr.scm, src/kahua-httpd.scm
	  Now kahua-keyserv, kahua-spvr, kahua-httpd support -t(--threads)
	  option that has a argument as size of thread pool, and
	  add :keyserv-concurrency and :httpd-concurrency to config file
	  as well as :spvr-concurrency.

2007-06-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/persistence.scm
	  Fix a problem that cannot check or fix efs database.
	  It's embugged at 2007-05-24.

2007-06-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-user.scm
	  Replace function names kahua-web-{adduser,deluser,lsuser}
	  with kahua-{adduser,deluser,lsuser}.
	  Command ls's output is now alphabetically sorted.

	* Change: src/kahua/server.scm
	  If a user is deactivated during login, he/she is immediately
	  logout.

2007-05-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* New: src/kahua-user.scm
	  New command-line user(<kahua-user> instances) management
	  tool.  This is imported from kahua-web CVS HEAD(0.3_pre10).

	* Change: src/kahua/user.scm
	  Export kahua-current-user-class.

2007-05-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-admin.scm, src/kahua-install.scm,
	          src/kahua-server.scm, src/kahua-shell.scm
	  Arrange code and purge usage of with-error-handler.
	  Replace them with guard macro.

2007-05-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: emacs/kahua.el.in
	  Compatibility with Emacs 21 (that doesn't have read-directory-name).

2007-05-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Context didn't have "x-kahua-remote-addr".
